--- a/TPC_API/.classpath
+++ b/TPC_API/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="gson-2.8.5.jar"/>
 	<classpathentry kind="lib" path="json-20180813.jar"/>
 	<classpathentry kind="lib" path="commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="SparseBitSet-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
